--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -3,17 +3,24 @@
 @model Web.Pages.CCGMember.Similar.SimilarDetailsModel
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
+    var routedata = new Dictionary<string, string>
+    {
+        {"positionid" , Model.Id.ToString()},
+         { "obj",  Model.PositionId.ToString()}
+
+    };
 }
 
     <section role="contentinfo">
+        <form method="post">
+            <div class="row mrgn-tp-md">
+                <a class="btn btn-primary mrgn-lft-md" href="@Url.Action("PositionDetails","ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})">@Localizer["Save PDF"]</a>
+                <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="/CCGMember/Similar/GeneratePdf">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Home"]&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            </div>
+        </form>
         <div class="row mrgn-tp-md">
-            <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
-            <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../../Index">@Localizer["Home"]</a>
+            <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../Compare/Delta" asp-all-route-data="@routedata">@Localizer["Compare"]</a>
         </div>
-        <div class="row mrgn-tp-md">
-            <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Save PDF"]</button>
-        </div>
-
         <table class="table table-hover table-bordered mrgn-tp-lg" width="100%" border="0" cellspacing="0" cellpadding="0">
             <thead>
                 <tr>
