--- a/Web/Pages/Shared/_ThemePdf.cshtml
+++ b/Web/Pages/Shared/_ThemePdf.cshtml
@@ -1,12 +1,9 @@
 ﻿@inject IViewLocalizer Localizer
-@{
-
-    var twoLetter = "en";
-    var isEnglish = twoLetter == "en";
-}
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <!--<![endif]-->
+<html class="no-js" dir="ltr">
 <head>
     <meta charset="utf-8">
     <title>
@@ -36,15 +33,6 @@
 <body vocab="http://schema.org/" typeof="WebPage">
     <header role="banner">
         <div id="wb-bnr">
-            <div id="wb-bar">
-                <div class="container">
-                    <div class="row">
-                        <object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="~/themes-dist-4.0.25-theme-gcwu-fegc/theme-gcwu-fegc/assets/sig-@(twoLetter).svg" aria-label="Government of Canada"></object>
-
-
-                    </div>
-                </div>
-            </div>
             <div class="container">
                 <div class="row">
                     <div id="wb-sttl" class="col-md-5">
