--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -4,7 +4,7 @@
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var routedataprevious = new Dictionary<string, string>
-    {
+{
         {"positionid",Model.PositionId.ToString()},
         {"RouteParameter", Model.Id },
         {"pagesubmit", "true" }
@@ -12,43 +12,44 @@
     var countmessage = Model.Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
 <div class="row mrgn-tp-md">
-    <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Save PDF"]</button>
+    <a class="btn btn-primary mrgn-lft-md" href="@Url.Action("SimilarList","ToPdf", new { id = Model.Id, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})">@Localizer["Save PDF"]</a>
     <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../../Index">@Localizer["Home"]</a>
 </div>
 <div class="row mrgn-tp-md">
     <nav role="navigation" class="mrgn-bttm-lg">
         <h2 class="wb-inv">Document navigation</h2>
-        <a class="btn btn-primary mrgn-lft-md" asp-page="SimilarSearch" asp-all-route-data="@routedataprevious">&nbsp;&nbsp;@Localizer["Previous"]&nbsp;&nbsp;</a>     
+        <ul class="pager">
+            <li class="previous"><a class="mrgn-lft-md" asp-page="SimilarSearch" asp-all-route-data="routedataprevious">@Localizer["Previous"]</a></li>
+        </ul>
     </nav>
-    
 </div>
-<div class="mrgn-tp-lg">
-    <h3 class="text-center">@Localizer["SIMILAR POSITIONS"]</h3>
-    <h5>@Model.Positions.Length @Localizer[countmessage]</h5>
-    <table class="table table-hover table-responsive table-bordered">
-        <thead>
-            <tr>
-                <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
-                <th class="bg-primary" width="75%">@Localizer["POSITIONS"]</th>
-                <th class="bg-primary" width="10%"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var position in Model.Positions)
-            {
-                var routedata = new Dictionary<string, string>
-             {
+    <div class="mrgn-tp-lg">
+        <h3 class="text-center">@Localizer["SIMILAR POSITIONS"]</h3>
+        <h5>@Model.Positions.Length @Localizer[countmessage]</h5>
+        <table class="table table-hover table-responsive table-bordered">
+            <thead>
+                <tr>
+                    <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
+                    <th class="bg-primary" width="75%">@Localizer["POSITIONS"]</th>
+                    <th class="bg-primary" width="10%"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var position in Model.Positions)
+                {
+                    var routedata = new Dictionary<string, string>
+                 {
         { "positionid",  position.JobTitleId.ToString()},
         { "id",  Model.PositionId.ToString()}
         };
-                
+
             <tr>
                 <td>@position.JobGroupCode-@position.JobLevelValue</td>
                 <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
                 <td><a asp-page="SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
             </tr>
-            }
-        </tbody>
-    </table>
-</div>
+        }
+            </tbody>
+        </table>
+    </div>
 
