--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -11,27 +11,22 @@
     };
     var countmessage = Model.Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
-<div class="row mrgn-tp-md">
-    <a class="btn btn-primary mrgn-lft-md" href="@Url.Action("SimilarList","ToPdf", new { id = Model.Id, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})">@Localizer["Save PDF"]</a>
-    <a class="btn btn-primary pull-right mrgn-rght-md" type="button" asp-page="../../Index">@Localizer["Home"]</a>
+
+<div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
+    <a href="@Url.Action("SimilarList","ToPdf", new { id = Model.Id, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="@Localizer["print"]" alt="@Localizer["print"]"></span> </a>
+    <a href="@Url.Action("SimilarList","ToPdf", new { id = Model.Id, positionid = Model.PositionId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]" alt="@Localizer["save"]"></span> </a>
 </div>
-<div class="row mrgn-tp-md">
-    <nav role="navigation" class="mrgn-bttm-lg">
-        <h2 class="wb-inv">Document navigation</h2>
-        <ul class="pager">
-            <li class="previous"><a class="mrgn-lft-md" asp-page="SimilarSearch" asp-all-route-data="routedataprevious">@Localizer["Previous"]</a></li>
-        </ul>
-    </nav>
-</div>
+
+
     <div class="mrgn-tp-lg">
         <h3 class="text-center">@Localizer["SIMILAR POSITIONS"]</h3>
         <h5>@Model.Positions.Length @Localizer[countmessage]</h5>
         <table class="table table-hover table-responsive table-bordered">
             <thead>
                 <tr>
-                    <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
+                    <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                     <th class="bg-primary" width="75%">@Localizer["POSITIONS"]</th>
-                    <th class="bg-primary" width="10%"></th>
+                    <th class="bg-primary" width="13%"></th>
                 </tr>
             </thead>
             <tbody>
@@ -51,5 +46,14 @@
         }
             </tbody>
         </table>
+    </div>
+
+    <div class="row mrgn-tp-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a class="btn btn-default mrgn-lft-md" rel="prev" asp-page="SimilarSearch" asp-all-route-data="routedataprevious">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
     </div>
 
