--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -7,10 +7,11 @@
             <h2>Topics menu</h2>
             <div class="row">
                 <ul class="list-inline menu">
-                    <li><a href="/en/Mockups/Index">Career Competency Tool</a></li>
-                    <li><a href="/en/Mockups/member_position">CCG Member</a></li>
-                    <li><a href="/en/Mockups/External_Candidate">External Candidate</a></li>
-                    <li><a href="/en/Mockups/Student">Student</a></li>
+                    <li><a href="/en/Index">Career Competency Tool</a></li>
+                    <li><a href="/en/CCGMember/AllPositions">CCG Member</a></li>
+                    <li><a href="/en/Candidate/Index">External Candidate</a></li>
+                    <li><a href="/en/Student/Index">Student</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" target="_blank" class="item">Contactez-nous</a>
                 </ul>
             </div>
         </div>
@@ -23,10 +24,11 @@ else
             <h2>Menu des sujets</h2>
             <div class="row">
                 <ul class="list-inline menu">
-                    <li><a href="/fr/Mockups/Index">Outil de compétence professionnelle</a></li>
-                    <li><a href="/fr/Mockups/member_position">Membre de la GCC</a></li>
-                    <li><a href="/fr/Mockups/External_Candidate">Candidat externe</a></li>
-                    <li><a href="/fr/Mockups/Student">Étudiant</a></li>
+                    <li><a href="/fr/Index" class="item">Outil de compétence professionnelle</a></li>
+                    <li><a href="/fr/CCGMember/AllPositions">Membre de la GCC</a></li>
+                    <li><a href="/fr/Candidate/Index">Candidat externe</a></li>
+                    <li><a href="/fr/Student/Index">Étudiant</a></li>
+                    <li><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" target="_blank" class="item">Contactez-nous</a>
                 </ul>
             </div>
         </div>
