--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -15,19 +15,19 @@
 <div class="container">
     <div class="row">
         <a asp-page="CCGMember/AllPositions">
-            <div class="col-sm-4">
+            <div class="col-md-3">
                 <img src="~/img/CCG-employee.png" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["CCGMember"]</h3>
             </div>
-        </a>
+        </a>    
         <a asp-page="Candidate/Index">
-            <div class="col-sm-4">
+            <div class="col-md-3">
                 <img src="~/img/external candidates.png" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["ExternalCandidate"]</h3>
             </div>
         </a>
-        <a asp-page="">
-            <div class="col-sm-4">
+        <a asp-page="Student/Index">
+            <div class="col-md-3">
                 <img src="~/img/Students.png" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["Student"]</h3>
             </div>
