--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -64,15 +64,15 @@
                         <ul id="gc-bar" class="list-inline">
                             @if (isEnglish)
                             {
-                                <li><a href="http://www.canada.ca/en/index.html" rel="external">Canada.ca</a></li>
-                                <li><a href="http://www.canada.ca/en/services/index.html" rel="external">Services</a></li>
-                                <li><a href="http://www.canada.ca/en/gov/dept/index.html" rel="external">Departments</a></li>
+                                <li><a href="http://www.canada.ca/en/index.html" target="_blank" rel="external">Canada.ca</a></li>
+                                <li><a href="http://www.canada.ca/en/services/index.html" target="_blank" rel="external">Services</a></li>
+                                <li><a href="http://www.canada.ca/en/gov/dept/index.html" target="_blank" rel="external">Departments</a></li>
                             }
                             else
                             {
-                                <li><a href="http://www.canada.ca/fr/index.html" rel="external">Canada.ca</a></li>
-                                <li><a href="http://www.canada.ca/fr/services/index.html" rel="external">Services</a></li>
-                                <li><a href="http://www.canada.ca/fr/gouv/min/index.html" rel="external">Ministères</a></li>
+                                <li><a href="http://www.canada.ca/fr/index.html" target="_blank" rel="external">Canada.ca</a></li>
+                                <li><a href="http://www.canada.ca/fr/services/index.html" target="_blank" rel="external">Services</a></li>
+                                <li><a href="http://www.canada.ca/fr/gouv/min/index.html" target="_blank" rel="external">Ministères</a></li>
 }
                             <li id="wb-lng">
                                 <h2>
