--- a/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
@@ -33,7 +33,7 @@
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-eng.html">Stay connected</a></h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-eng.html" target="_blank">Stay connected</a></h3>
                         <ul class="list-unstyled">
                             <li><a href="https://www.facebook.com/CanadianCoastGuard" alt="Link to CCG on Facebook" target="_blank">Facebook</a></li>
                             <li><a href="https://twitter.com/CoastGuardCAN" alt="Link to CCG on Twitter" target="_blank">Twitter</a></li>
@@ -49,12 +49,12 @@
                 <nav role="navigation">
                     <h2>Government of Canada footer</h2>
                     <ul class="list-inline">
-                        <li><a href="http://healthycanadians.gc.ca"><span>Health</span></a></li>
-                        <li><a href="http://travel.gc.ca"><span>Travel</span></a></li>
-                        <li><a href="http://www.servicecanada.gc.ca/eng/home.shtml"><span>Service Canada</span></a></li>
-                        <li><a href="http://www.jobbank.gc.ca"><span>Jobs</span></a></li>
-                        <li><a href="http://actionplan.gc.ca/en"><span>Economy</span></a></li>
-                        <li id="canada-ca"><a href="http://www.canada.ca/en/index.html">Canada.ca</a></li>
+                        <li><a href="http://healthycanadians.gc.ca" target="_blank"><span>Health</span></a></li>
+                        <li><a href="http://travel.gc.ca" target="_blank"><span>Travel</span></a></li>
+                        <li><a href="http://www.servicecanada.gc.ca/eng/home.shtml" target="_blank"><span>Service Canada</span></a></li>
+                        <li><a href="http://www.jobbank.gc.ca" target="_blank"><span>Jobs</span></a></li>
+                        <li><a href="http://actionplan.gc.ca/en" target="_blank"><span>Economy</span></a></li>
+                        <li id="canada-ca"><a href="http://www.canada.ca/en/index.html" target="_blank">Canada.ca</a></li>
                     </ul>
                 </nav>
             </div>
@@ -94,7 +94,7 @@ else
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-fra.html">Restez branchés</a></h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-fra.html" target="_blank">Restez branchés</a></h3>
                         <ul class="list-unstyled">
                             <li><a href="https://www.facebook.com/GardeCotiereCanadienne" alt="Lien vers GCC sur Facebook" target="_blank">Facebook</a></li>
                             <li><a href="https://twitter.com/GardeCotiereCAN" alt="Lien vers GCC sur Twitter" target="_blank">Twitter</a></li>
@@ -110,12 +110,12 @@ else
                 <nav role="navigation">
                     <h2>Pied de page du gouvernement du Canada</h2>
                     <ul class="list-inline">
-                        <li><a href="http://canadiensensante.gc.ca"><span>Santé</span></a></li>
-                        <li><a href="http://voyage.gc.ca"><span>Voyage</span></a></li>
-                        <li><a href="http://www.servicecanada.gc.ca/fra/accueil.shtml"><span>Service Canada</span></a></li>
-                        <li><a href="http://www.guichetemplois.gc.ca"><span>Emplois</span></a></li>
-                        <li><a href="http://plandaction.gc.ca/fr"><span>Économie</span></a></li>
-                        <li id="canada-ca"><a href="http://www.canada.ca/fr/index.html">Canada.ca</a></li>
+                        <li><a href="http://canadiensensante.gc.ca" target="_blank"><span>Santé</span></a></li>
+                        <li><a href="http://voyage.gc.ca" target="_blank"><span>Voyage</span></a></li>
+                        <li><a href="http://www.servicecanada.gc.ca/fra/accueil.shtml" target="_blank"><span>Service Canada</span></a></li>
+                        <li><a href="http://www.guichetemplois.gc.ca" target="_blank"><span>Emplois</span></a></li>
+                        <li><a href="http://plandaction.gc.ca/fr" target="_blank"><span>Économie</span></a></li>
+                        <li id="canada-ca"><a href="http://www.canada.ca/fr/index.html" target="_blank">Canada.ca</a></li>
                     </ul>
                 </nav>
             </div>
