--- a/Web/Pages/Candidate/Index.cshtml
+++ b/Web/Pages/Candidate/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <figure>
-                    <a class="nav-link" href="Questionnaire">
+                    <a class="nav-link" asp-page="Shoreside/AllCandidateShoreside">
                         <img src="~/img/Candidate/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Shoreside"]</h4></figcaption>
@@ -15,7 +15,7 @@
             </div>
             <div class="col-sm-4">
                 <figure>
-                    <a href="Questionnaire">
+                    <a asp-page="Seagoing/Index">
                         <img src="~/img/Candidate/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Seagoing"]</h4></figcaption>
