--- a/Web/Pages/Mockups/External_Shoreside.cshtml
+++ b/Web/Pages/Mockups/External_Shoreside.cshtml
@@ -11,7 +11,7 @@
 
         <div class="col-sm-4 mrgn-bttm-md">
             <figure>
-                <a href="External_Offshore"><img src="~/img/AS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
+                <a href="External_Offshore"><img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
                 <figcaption class="text-center"><h6>@Localizer["AS"]</h6></figcaption>
             </figure>
         </div>
