--- a/Web/Pages/Mockups/Ship_Officer.cshtml
+++ b/Web/Pages/Mockups/Ship_Officer.cshtml
@@ -11,7 +11,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a class="nav-link" href="Nav_Officer">
-                        <img src="~/img/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
                 </figure>
@@ -19,7 +19,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a href="Eng_Officer">
-                        <img src="~/img/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
                 </figure>
