--- a/Web/Pages/Mockups/External_Candidate.cshtml
+++ b/Web/Pages/Mockups/External_Candidate.cshtml
@@ -12,7 +12,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a class="nav-link" href="External_Shoreside">
-                        <img src="~/img/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Candidate/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Shoreside"]</h4></figcaption>
                 </figure>
@@ -20,7 +20,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a href="External_Seagoing">
-                        <img src="~/img/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Candidate/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Seagoing"]</h4></figcaption>
                 </figure>
