--- a/Web/Pages/Mockups/External_Seagoing.cshtml
+++ b/Web/Pages/Mockups/External_Seagoing.cshtml
@@ -10,7 +10,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a class="nav-link" href="Ship_Officer">
-                        <img src="~/img/SO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/SO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Officer"]</h4></figcaption>
                 </figure>
@@ -18,7 +18,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a href="Ship_Crew">
-                        <img src="~/img/Ships_Crew.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Crew"]</h4></figcaption>
                 </figure>
