--- a/Web/Pages/Mockups/Ship_Crew.cshtml
+++ b/Web/Pages/Mockups/Ship_Crew.cshtml
@@ -11,7 +11,7 @@
             <div class="col-sm-3">
                 <figure>
                     <a class="nav-link" href="Crew_Deck">
-                        <img src="~/img/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
                 </figure>
@@ -19,7 +19,7 @@
             <div class="col-sm-3">
                 <figure>
                     <a href="Crew_Engineering">
-                        <img src="~/img/oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/Oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
                 </figure>
@@ -27,7 +27,7 @@
             <div class="col-sm-3">
                 <figure>
                     <a href="Crew_Logistics">
-                        <img src="~/img/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Logistics"]</h4></figcaption>
                 </figure>
